node-main/deps/v8/test/message/fail/object-binding-pattern-await1.out
*%(basename)s:6: SyntaxError: Invalid destructuring assignment target
  let { a: await b } = { a: 1 };
           ^^^^^^^
SyntaxError: Invalid destructuring assignment target
